# markdown_viewer

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  desktop-template
Deploy/: DEPLOY.md  Uninstall.md  mdvw.desktop
assets/: main.css
icons/: icon.icns
src/: app.rs  main.rs
