[package]
name = "mdvw"
description = "Display a formatted Markdown file in a GUI window"
version = "0.1.0"
authors = ["Paul Sobolik <psobolik@zoho.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.34" }
dioxus = { version = "0.6.0" }
pulldown-cmark = "0.13.0"

[features]
default = ["desktop"]
#web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
#mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

#[profile.wasm-dev]
#inherits = "dev"
#opt-level = 1

#[profile.server-dev]
#inherits = "dev"

#[profile.android-dev]
#inherits = "dev"
